--- a/src/app/modules/dashboard/pages/product-details/product-details.component.scss
+++ b/src/app/modules/dashboard/pages/product-details/product-details.component.scss
@@ -1,3 +1,12 @@
 .swiper-slide {
   width: 100% !important;
 }
+
+ion-content {
+  &.ios {
+    .relative {
+      padding-top: env(safe-area-inset-top);
+      padding-bottom: env(safe-area-inset-bottom);
+    }
+  }
+}
