--- a/src/app/modules/profile/pages/profile-page/profile-page.component.html
+++ b/src/app/modules/profile/pages/profile-page/profile-page.component.html
@@ -1,36 +1,40 @@
-<div class='p-[22px] h-full bg-white relative'
-     *ngIf='currentUser'
-     [ngStyle]="{'padding-top': offerService.isPlatform.is('ios') ? '40px' : '20px'}">
-  <img class='w-[80px] h-[80px] rounded-full mt-[10px]'
-       [src]="'https://plastic-market-app.ru/img/' + currentUser.photo"
-       (error)="errorAvatar($event)"
-       alt=''>
-  <div class='mt-[20px] mb-[10px] text-[30px] leading-[30px] font-medium'>{{ currentUser.name  }}</div>
-  <div class='mb-[10px] text-[14px] leading-[14px] text-gray-800'>{{ currentUser.email }}</div>
+<ion-content>
+  <div class='p-[22px] h-full bg-white relative'
+       *ngIf='currentUser'>
 
-  <div (click)='back()'
-       class='bg-gray flex justify-center items-center rounded-full p-[15px] absolute right-[22px]'
-       [ngStyle]="{'top': offerService.isPlatform.is('ios') ? '40px' : '20px'}"
-  >
-    <span class='icon icon-close bg-white w-[14px] h-[14px]'></span>
-  </div>
-
-  <div class='mt-[46px] flex flex-col h-full'>
-    <div class='flex items-center mb-[30px]'
-         [routerLink]="[item.link]"
-         *ngFor='let item of items; let last = last'
-         [class.mb-[-30px]]='last'
-         (click)='last && logout()'
-    >
-      <div class='rounded-full w-[36px] h-[36px] flex justify-center items-center'
-           [class.bg-primary]='!last'
-           [class.bg-red-200]='last'
-      >
-
-        <span class='icon icon-{{ item.icon }} bg-white w-[16px]'></span>
+    <div class='flex flex-1 items-center justify-between'>
+      <img class='w-[80px] h-[80px] rounded-full mt-[10px]'
+           [src]="'https://plastic-market-app.ru/img/' + currentUser.photo"
+           (error)="errorAvatar($event)"
+           alt=''>
+      <div (click)='back()'
+           class='bg-gray flex justify-center items-center rounded-full p-[15px] h-max'>
+        <span class='icon icon-close bg-white w-[14px] h-[14px]'></span>
       </div>
+    </div>
+    <div class='mt-[20px] mb-[10px] text-[30px] leading-[30px] font-medium'>{{ currentUser.name  }}</div>
+    <div class='mb-[10px] text-[14px] leading-[14px] text-gray-800'>{{ currentUser.email }}</div>
 
-      <div class='ml-[15px] text-[16px] leading-[19px] text-black-300'>{{ item.title }}</div>
+
+
+    <div class='mt-[46px] flex flex-col h-full'>
+      <div class='flex items-center mb-[30px]'
+           [routerLink]="[item.link]"
+           *ngFor='let item of items; let last = last'
+           [class.mb-[-30px]]='last'
+           (click)='last && logout()'
+      >
+        <div class='rounded-full w-[36px] h-[36px] flex justify-center items-center'
+             [class.bg-primary]='!last'
+             [class.bg-red-200]='last'
+        >
+
+          <span class='icon icon-{{ item.icon }} bg-white w-[16px]'></span>
+        </div>
+
+        <div class='ml-[15px] text-[16px] leading-[19px] text-black-300'>{{ item.title }}</div>
+      </div>
     </div>
   </div>
-</div>
+
+</ion-content>
