--- a/src/app/modules/profile/pages/sales-list/sales-list.component.html
+++ b/src/app/modules/profile/pages/sales-list/sales-list.component.html
@@ -3,8 +3,8 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <div class='px-[22px] bg-white' [ngStyle]="{'padding-top': offerService.isPlatform.is('ios') ? '40px' : '22px'}">
-    <div class='sticky top-0 bg-white z-40 pt-[22px] pb-[10px]'>
+  <div class='p-[22px] bg-white form-container'>
+    <div class='sticky top-0 bg-white z-40'>
       <div class='flex items-center mb-[15px]'>
         <div (click)='navigateToBack()'
                       class='rotate-180 flex items-center justify-center bg-primary w-[44px] h-[44px] rounded-full hover:opacity-[.8]'>
