--- a/src/app/shared/components/tooltip/tooltip.component.html
+++ b/src/app/shared/components/tooltip/tooltip.component.html
@@ -1,4 +1,4 @@
-<div [ngStyle]="{'padding-top': offerService.isPlatform.is('ios') ? '40px' : '20px'}"
+<ion-header
      class='flex items-center justify-between p-[22px] sticky top-0 z-[99] bg-white pb-[10px]'>
   <ion-menu-toggle class='mr-[12px]'>
     <span class='icon icon-menu w-[16px]'></span>
@@ -9,4 +9,4 @@
     <input (input)='change($event)' type='text' class='mr-[8px] bg-transparent outline-none border-none flex-1'>
     <span class='icon icon-filter w-[18px]' (click)='openModal()'></span>
   </div>
-</div>
+</ion-header>
