--- a/src/app/shared/controls/custom-select/select-modal/select-modal.component.html
+++ b/src/app/shared/controls/custom-select/select-modal/select-modal.component.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <div class='p-[22px]'>
+  <div class='p-[22px] modal-container'>
 
     <div class='flex justify-end mb-[10px]'>
       <div (click)='cancel()' class='bg-primary flex justify-center items-center rounded-full p-[15px]'>
